--- a/src/components/nav/NavItem.module.scss
+++ b/src/components/nav/NavItem.module.scss
@@ -62,7 +62,7 @@
     z-index: 10;
 }
 .nav_link::after {
-    width: 6rem;
+    width: 100%;
     cursor: pointer;
     transition: width 0.4s ease-in-out;
 }
